# ad2io

./: .gitignore  app.py  device.py  digital_io.py  pyproject.toml  utils.py
client/: package.json
client/src/: App.css  App.tsx  index.css
