[tool.poetry]
name = "ad2io"
version = "0.1.0"
description = ""
authors = ["Areeq Hasan <areeq.i.hasan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
flask = "^2.2.2"
flask-cors = "^3.0.10"
jupyter = "^1.0.0"
notebook = "^6.5.2"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.6"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
